--- a/Proyecto1/src/main/resources/application.properties
+++ b/Proyecto1/src/main/resources/application.properties
@@ -13,3 +13,10 @@
 
 # log to file (absolute/relative path of log file)
 #logging.file=path/to/log/file.log
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
